# sfml-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: build-apk.yml  build-installer.yml  build.yml  run-lint.yml  run-tests.yml
android/: .gitignore  CMakeLists.txt  build.gradle
android/.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/: .gitignore  AndroidManifest.xml  AndroidManifest.xml.in
android/app/src/main/jni/: Android.mk  Android.mk.in  Application.mk
android/hacks/: SFMLActivity.cpp  box2d-android.mk  sfml-android-fix.patch
benchmarks/: CMakeLists.txt  bench1.cpp
source/: debug.hpp  main.cpp
sources/: CMakeLists.txt  debug.cpp  debug.hpp  main.cpp
tests/: CMakeLists.txt  test1.cpp
